chore: update to Silero VAD V5 Model and ORT 2.0.0-rc.10 (#50)
* fix(deps): lock ort and ort-sys to =2.0.0-rc.9 to avoid build failures.

By default, specifying version = "2.0.0-rc.9" allows Cargo to auto-upgrade to compatible pre-release versions like 2.0.0-rc.10.

However, 2.0.0-rc.10 introduces breaking changes that cause this project to fail to compile.

This commit explicitly locks both `ort` and `ort-sys` to version =2.0.0-rc.9 to prevent such automatic upgrades and ensure a stable build.

According to the Semantic Versioning 2.0.0 spec (https://semver.org/), pre-release versions are considered lower precedence than their corresponding release, but version ranges still allow newer pre-releases unless locked with an '='.

* chore: update silero_vad.onnx

(cherry picked from commit aaa23278dfcd9f688682d9da0b392ed25392fa25)

* feat: update VAD state and model interface for new Silero VAD ONNX; fix most tests

- Refactored VAD state: merged `h` and `c` into a single `state: ArrayD<f32>` with shape [2, 1, 128] to match new Silero VAD ONNX model interface.
- Updated all state initialization, reset, and update logic to use the new state.
- Changed model input/output handling in `predict` to use `input`, `state`, and `sample_rate` as inputs, and `stateN`/`output` as outputs.
- Ensured input audio is sliced to 480 samples if chunk_size > 480.
- Ensured sample_rate is passed as a scalar.
- Confirmed all code compiles and most tests pass, including async and sync tests.
- Only the async `chunk_stream` test still fails with ONNX input shape error; all other tests pass.
- Added detailed troubleshooting and root cause analysis in comments and commit message.

Failed test: chunk_stream

failures:

---- chunk_stream stdout ----

thread 'chunk_stream' panicked at /var/home/jim60105/repos/voice_activity_detector/src/vad.rs:81:48:
called `Result::unwrap()` on an `Err` value: Error { code: InvalidArgument, msg: "Non-zero status code returned while running If node. Name:'If_0' Sta

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,25 @@ include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
 [dependencies]
 futures = "0.3.31"
 ndarray = "0.16.1"
-ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
 pin-project = "1.1.10"
 thiserror = "^2"
 typed-builder = "0.20.1"
+
+# Lock the 'ort' dependency to exactly version 2.0.0-rc.10
+# Reason:
+# When specifying version = "2.0.0-rc.10" without the '=' sign,
+# Cargo treats it as a caret requirement (^2.0.0-rc.10), which includes pre-release versions like rc.10.
+# If a newer pre-release (e.g., 2.0.0-rc.11) exists, Cargo may auto-upgrade to it.
+# However, future rc releases may introduce changes that cause this project to fail to compile.
+# Using '=2.0.0-rc.10' ensures that Cargo installs exactly this version, avoiding unexpected breakage.
+[dependencies.ort]
+version = "=2.0.0-rc.10"
+features = ["ndarray"]
+
+# Similarly, lock 'ort-sys' to the same exact version.
+# This ensures consistency and prevents indirect upgrades that could lead to version mismatches or build issues.
+[dependencies.ort-sys]
+version = "=2.0.0-rc.10"
 
 [dev-dependencies]
 hound = "3.5.1"
