--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.2.1"
 edition = "2021"
 authors = ["Nick Keenan <nkeenan38@gmail.com>"]
 description = "Voice Activity Detector using the Silero VAD model."
+license = "MIT"
 license-file = "LICENSE"
 repository = "https://github.com/nkeenan38/voice_activity_detector"
 readme = "README.md"
